fixed minor  spacing issues.

--- a/src/output.css
+++ b/src/output.css
@@ -246,6 +246,15 @@
   .my-auto {
     margin-block: auto;
   }
+  .mt-2 {
+    margin-top: calc(var(--spacing) * 2);
+  }
+  .mt-5 {
+    margin-top: calc(var(--spacing) * 5);
+  }
+  .mt-6 {
+    margin-top: calc(var(--spacing) * 6);
+  }
   .mb-5 {
     margin-bottom: calc(var(--spacing) * 5);
   }
